[tool.poetry]
name = "kvm-control"
version = "0.1.0"
description = "KVM control scripts for remote mouse and keyboard control"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"