[tool.poetry]
name = "mouse-passthrough"
version = "0.1.0"
description = "Mouse passthrough scripts for remote mouse and keyboard control"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "mouse_passthrough"}]

[tool.poetry.dependencies]
python = "^3.8"
pynput = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"